font and description updated

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RIVAL CLUBS</title>
+    <meta name="description" content="Frantic guitars, electronic paranoia, and intense rhythm sections blend post-punk and new wave in dark environments.">
+    <meta name="keywords" content="Post punk, rock, showgaze, punk, portugal, netherlands, rival clubs, lisbon">
+    <meta name="author" content="Rival CLubs">
     <link rel="stylesheet" href="fashion.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Xanh+Mono:ital@0;1&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Xanh+Mono:ital@0;1&display=swap');
     </style>
 </head>
 <body>
