--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
             <source src="bg-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        <div class="video-overlay"></div>
     </div>
 
     <!-- Header Section -->
     <header>
-        <h1>rival clubs</h1>
+        <h1><span class="line1">RIVAL</span><span class="line2">CLUBS</span></h1>
     </header>
+
+    <!-- YouTube Video Section -->
+    <section class="video-section">
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/kMFjrEIyM_w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </section>
 
     <!-- Links Section -->
     <nav class="links">
@@ -55,6 +63,13 @@
                 <a title="applemusic" href="https://music.apple.com/us/artist/rival-clubs/1726033196">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16.2321 15.4446C16.0607 16.1732 15.5089 16.5804 14.7696 16.7196C14.1214 16.8375 13.5804 16.8696 13.0607 16.4518C12.4286 15.9161 12.4179 15.0375 12.9857 14.4804C13.4357 14.0518 14.0732 13.9661 15.0214 13.7946C15.1821 13.7679 15.3214 13.7304 15.4339 13.5964C15.6054 13.4036 15.5518 13.4893 15.5518 9.26786C15.5518 8.96786 15.4071 8.8875 15.1018 8.94107C14.8875 8.97857 10.1786 9.85714 10.1786 9.85714C9.91071 9.91607 9.81964 9.99643 9.81964 10.3018C9.81964 16.5214 9.84643 16.2375 9.75536 16.65C9.64286 17.1321 9.34821 17.4964 8.95714 17.7C8.5125 17.9464 7.70357 18.0536 7.275 17.9786C6.12857 17.7643 5.72679 16.4411 6.50357 15.6804C6.95357 15.2518 7.59107 15.1661 8.53929 14.9946C8.7 14.9679 8.83929 14.9304 8.95179 14.7964C9.21964 14.4911 9 7.99286 9.09107 7.63393C9.1125 7.49464 9.17143 7.37679 9.27857 7.29107C9.39107 7.2 9.58929 7.14643 9.6375 7.14643C15.0482 6.12857 15.7071 6 15.8036 6C16.1089 5.97857 16.2857 6.16071 16.2857 6.46607C16.2804 15.6054 16.3071 15.1125 16.2321 15.4446ZM18.4929 0H5.50714C2.45893 0 0 2.45893 0 5.50714V18.4929C0 21.5411 2.45893 24 5.50714 24H18.4929C21.5464 24 24 21.5411 24 18.4929V5.50714C24 2.45893 21.5411 0 18.4929 0Z" fill="currentColor"></path>
+                    </svg>
+                </a>
+            </li>
+            <li class="youtube">
+                <a title="youtube" href="https://www.youtube.com/@RivalClubs">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z" fill="currentColor"/>
                     </svg>
                 </a>
             </li>
