--- a/press-release-album.html
+++ b/press-release-album.html
@@ -18,7 +18,7 @@
                     <!-- Header with Logo -->
                     <tr>
                         <td align="center" style="padding: 40px 20px; background-color: #ffffff; border-bottom: 3px solid #ffcc00;">
-                            <img src="logo.jpeg" alt="Rival Clubs" style="max-width: 400px; width: 100%; height: auto; display: block;" />
+                            <img src="press-release-album/logo.jpeg" alt="Rival Clubs" style="max-width: 400px; width: 100%; height: auto; display: block;" />
                         </td>
                     </tr>
 
