added hardcoded urls

--- a/press-release-album.html
+++ b/press-release-album.html
@@ -18,7 +18,7 @@
                     <!-- Header with Logo -->
                     <tr>
                         <td align="center" style="padding: 40px 20px; background-color: #ffffff; border-bottom: 3px solid #ffcc00;">
-                            <img src="press-release-album/logo.jpeg" alt="Rival Clubs" style="max-width: 400px; width: 100%; height: auto; display: block;" />
+                            <img src="https://rivalclubs.dance/press-release-album/logo.jpeg" alt="Rival Clubs" style="max-width: 400px; width: 100%; height: auto; display: block;" />
                         </td>
                     </tr>
 
@@ -68,7 +68,7 @@
                             <table width="100%" cellpadding="0" cellspacing="0" border="0" style="border: 3px solid #ffcc00;">
                                 <tr>
                                     <td width="45%" style="padding: 0;">
-                                        <img src="EndlessOrderFiltered.jpg" alt="Endless Order Album" style="width: 100%; height: auto; display: block;" />
+                                        <img src="https://rivalclubs.dance/EndlessOrderFiltered.jpg" alt="Endless Order Album" style="width: 100%; height: auto; display: block;" />
                                     </td>
                                     <td width="55%" style="padding: 30px; background-color: #1a1a1a; vertical-align: middle;">
                                         <h2 style="margin: 0 0 20px 0; color: #ffcc00; font-family: 'Courier New', Courier, monospace; font-size: 24px; text-transform: uppercase; letter-spacing: 2px;">
@@ -126,15 +126,15 @@
                             <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                 <tr>
                                     <td width="31%" style="padding: 0; border: 2px solid #ffcc00;">
-                                        <img src="press-release-album/rp1.jpeg" alt="Rival Clubs Release Party" style="width: 100%; height: auto; display: block;" />
+                                        <img src="https://rivalclubs.dance/press-release-album/rp1.jpeg" alt="Rival Clubs Release Party" style="width: 100%; height: auto; display: block;" />
                                     </td>
                                     <td width="3.5%"></td>
                                     <td width="31%" style="padding: 0; border: 2px solid #ffcc00;">
-                                        <img src="press-release-album/rp2.jpeg" alt="Rival Clubs at Janela da Atalaia" style="width: 100%; height: auto; display: block;" />
+                                        <img src="https://rivalclubs.dance/press-release-album/rp2.jpeg" alt="Rival Clubs at Janela da Atalaia" style="width: 100%; height: auto; display: block;" />
                                     </td>
                                     <td width="3.5%"></td>
                                     <td width="31%" style="padding: 0; border: 2px solid #ffcc00;">
-                                        <img src="press-release-album/rp3.jpeg" alt="Rival Clubs Merch" style="width: 100%; height: auto; display: block;" />
+                                        <img src="https://rivalclubs.dance/press-release-album/rp3.jpeg" alt="Rival Clubs Merch" style="width: 100%; height: auto; display: block;" />
                                     </td>
                                 </tr>
                             </table>
@@ -151,7 +151,7 @@
                                 <tr>
                                     <td width="48%" valign="middle" style="padding: 0;">
                                         <a href="https://youtu.be/kMFjrEIyM_w" style="display: block; border: 2px solid #ffcc00;">
-                                            <img src="press-release-album/byd-video.jpg" alt="BYD Video" style="width: 100%; height: auto; display: block;" />
+                                            <img src="https://rivalclubs.dance/press-release-album/byd-video.jpg" alt="BYD Video" style="width: 100%; height: auto; display: block;" />
                                         </a>
                                     </td>
                                     <td width="4%"></td>
@@ -179,8 +179,8 @@
                             <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                 <tr>
                                     <td width="48%" valign="top" style="padding: 0;">
-                                        <a href="press-release-album/virada-gandaresa-2027.jpg" style="display: block; border: 2px solid #ffcc00;">
-                                            <img src="press-release-album/virada-gandaresa-2027.jpg" alt="Virada Gandaresa 2025" style="width: 100%; height: auto; display: block;" />
+                                        <a href="https://rivalclubs.dance/press-release-album/virada-gandaresa-2027.jpg" style="display: block; border: 2px solid #ffcc00;">
+                                            <img src="https://rivalclubs.dance/press-release-album/virada-gandaresa-2027.jpg" alt="Virada Gandaresa 2025" style="width: 100%; height: auto; display: block;" />
                                         </a>
                                         <p style="margin: 15px 0 0 0; color: #ffcc00; font-family: 'Courier New', Courier, monospace; font-size: 14px; line-height: 1.6;">
                                             <strong>◆ Próximo Concerto:</strong><br/>
@@ -191,7 +191,7 @@
                                     <td width="4%"></td>
                                     <td width="48%" valign="top" style="color: #e0e0e0; font-family: 'Courier New', Courier, monospace; font-size: 14px; line-height: 1.6;">
                                         <div style="background-color: #1a1a1a; border: 2px solid #ffcc00; padding: 20px;">
-                                            <img src="press-release-album/santaPT.png" alt="Feliz Natal" style="width: 100%; height: auto; display: block; margin: 0 0 20px 0; border: 1px solid #333;" />
+                                            <img src="https://rivalclubs.dance/press-release-album/santaPT.png" alt="Feliz Natal" style="width: 100%; height: auto; display: block; margin: 0 0 20px 0; border: 1px solid #333;" />
                                             <p style="margin: 0 0 15px 0; color: #ffcc00; font-size: 16px; text-transform: uppercase;">
                                                 A nossa Prenda ∞ Download Grátis
                                             </p>
@@ -218,7 +218,7 @@
                     <!-- Band Photo Separator -->
                     <tr>
                         <td style="padding: 0; background-color: #1a1a1a;">
-                            <img src="press-release-album/band.jpg" alt="Rival Clubs Band Photo" style="width: 100%; height: auto; display: block;" />
+                            <img src="https://rivalclubs.dance/press-release-album/band.jpg" alt="Rival Clubs Band Photo" style="width: 100%; height: auto; display: block;" />
                             <p style="margin: 0; padding: 15px 30px; color: #999999; font-family: 'Courier New', Courier, monospace; font-size: 10px; text-align: center; font-style: italic; background-color: #000000;">
                                 Foto por Francisco Fidalgo
                             </p>
@@ -248,7 +248,7 @@
                             <table width="100%" cellpadding="0" cellspacing="0" border="0" style="border: 3px solid #ffcc00;">
                                 <tr>
                                     <td width="45%" style="padding: 0;">
-                                        <img src="EndlessOrderFiltered.jpg" alt="Endless Order Album" style="width: 100%; height: auto; display: block;" />
+                                        <img src="https://rivalclubs.dance/EndlessOrderFiltered.jpg" alt="Endless Order Album" style="width: 100%; height: auto; display: block;" />
                                     </td>
                                     <td width="55%" style="padding: 30px; background-color: #1a1a1a; vertical-align: middle;">
                                         <h2 style="margin: 0 0 20px 0; color: #ffcc00; font-family: 'Courier New', Courier, monospace; font-size: 24px; text-transform: uppercase; letter-spacing: 2px;">
@@ -306,15 +306,15 @@
                             <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                 <tr>
                                     <td width="31%" style="padding: 0; border: 2px solid #ffcc00;">
-                                        <img src="press-release-album/rp4.jpeg" alt="Rival Clubs Release Party" style="width: 100%; height: auto; display: block;" />
+                                        <img src="https://rivalclubs.dance/press-release-album/rp4.jpeg" alt="Rival Clubs Release Party" style="width: 100%; height: auto; display: block;" />
                                     </td>
                                     <td width="3.5%"></td>
                                     <td width="31%" style="padding: 0; border: 2px solid #ffcc00;">
-                                        <img src="press-release-album/rp5.jpg" alt="Rival Clubs at Janela da Atalaia" style="width: 100%; height: auto; display: block;" />
+                                        <img src="https://rivalclubs.dance/press-release-album/rp5.jpg" alt="Rival Clubs at Janela da Atalaia" style="width: 100%; height: auto; display: block;" />
                                     </td>
                                     <td width="3.5%"></td>
                                     <td width="31%" style="padding: 0; border: 2px solid #ffcc00;">
-                                        <img src="press-release-album/rp6.jpeg" alt="Rival Clubs Merch" style="width: 100%; height: auto; display: block;" />
+                                        <img src="https://rivalclubs.dance/press-release-album/rp6.jpeg" alt="Rival Clubs Merch" style="width: 100%; height: auto; display: block;" />
                                     </td>
                                 </tr>
                             </table>
@@ -331,7 +331,7 @@
                                 <tr>
                                     <td width="48%" valign="middle" style="padding: 0;">
                                         <a href="https://youtu.be/kMFjrEIyM_w" style="display: block; border: 2px solid #ffcc00;">
-                                            <img src="press-release-album/byd-video2.jpg" alt="BYD Video" style="width: 100%; height: auto; display: block;" />
+                                            <img src="https://rivalclubs.dance/press-release-album/byd-video2.jpg" alt="BYD Video" style="width: 100%; height: auto; display: block;" />
                                         </a>
                                     </td>
                                     <td width="4%"></td>
@@ -359,8 +359,8 @@
                             <table width="100%" cellpadding="0" cellspacing="0" border="0">
                                 <tr>
                                     <td width="48%" valign="top" style="padding: 0;">
-                                        <a href="press-release-album/virada-gandaresa-2027.jpg" style="display: block; border: 2px solid #ffcc00;">
-                                            <img src="press-release-album/virada-gandaresa-2027.jpg" alt="Virada Gandaresa 2025" style="width: 100%; height: auto; display: block;" />
+                                        <a href="https://rivalclubs.dance/press-release-album/virada-gandaresa-2027.jpg" style="display: block; border: 2px solid #ffcc00;">
+                                            <img src="https://rivalclubs.dance/press-release-album/virada-gandaresa-2027.jpg" alt="Virada Gandaresa 2025" style="width: 100%; height: auto; display: block;" />
                                         </a>
                                         <p style="margin: 15px 0 0 0; color: #ffcc00; font-family: 'Courier New', Courier, monospace; font-size: 14px; line-height: 1.6;">
                                             <strong>◆ Next Show:</strong><br/>
@@ -371,7 +371,7 @@
                                     <td width="4%"></td>
                                     <td width="48%" valign="top" style="color: #e0e0e0; font-family: 'Courier New', Courier, monospace; font-size: 14px; line-height: 1.6;">
                                         <div style="background-color: #1a1a1a; border: 2px solid #ffcc00; padding: 20px;">
-                                            <img src="press-release-album/santaEN.jpg" alt="Merry Christmas" style="width: 100%; height: auto; display: block; margin: 0 0 20px 0; border: 1px solid #333;" />
+                                            <img src="https://rivalclubs.dance/press-release-album/santaEN.jpg" alt="Merry Christmas" style="width: 100%; height: auto; display: block; margin: 0 0 20px 0; border: 1px solid #333;" />
                                             <p style="margin: 0 0 15px 0; color: #ffcc00; font-size: 16px; text-transform: uppercase;">
                                                 Our gift ∞ Free Download
                                             </p>
@@ -398,7 +398,7 @@
                     <!-- Live Photo -->
                     <tr>
                         <td style="padding: 0; background-color: #040404;">
-                            <img src="press-release-album/live.jpg" alt="Rival Clubs Live" style="width: 100%; height: auto; display: block;" />
+                            <img src="https://rivalclubs.dance/press-release-album/live.jpg" alt="Rival Clubs Live" style="width: 100%; height: auto; display: block;" />
                         </td>
                     </tr>
 
