--- a/press-release-album.html
+++ b/press-release-album.html
@@ -12,6 +12,7 @@
                 display: block !important;
                 width: 100% !important;
                 padding: 10px 0 !important;
+                box-sizing: border-box !important;
             }
 
             /* Hide spacer columns on mobile */
@@ -23,12 +24,14 @@
             .album-image {
                 display: block !important;
                 width: 100% !important;
+                box-sizing: border-box !important;
             }
 
             .album-text {
                 display: block !important;
                 width: 100% !important;
                 padding: 20px !important;
+                box-sizing: border-box !important;
             }
 
             /* Photo grids - stack vertically */
@@ -36,11 +39,13 @@
                 display: block !important;
                 width: 100% !important;
                 padding: 0 0 10px 0 !important;
+                box-sizing: border-box !important;
             }
 
             /* Adjust padding for mobile */
             .mobile-padding {
                 padding: 15px !important;
+                box-sizing: border-box !important;
             }
 
             /* Make buttons full width on mobile */
