--- a/press-release-album.html
+++ b/press-release-album.html
@@ -153,7 +153,7 @@
                                             Passou um mês desde que lançámos o nosso álbum <strong style="color: #ffcc00;">Endless Order</strong>. Depois de semanas de correria de promoção, concertos, festejos e recuperação de festejos, conseguimos finalmente dedicar-nos aos nossos amigos do mundo em linha.
                                         </p>
                                         <p style="margin: 0 0 15px 0;">
-                                            No mundo real, foi no dia 14 de Novembro que partilhámos o nosso primeiro longa-duração com as nossas pessoas mais próximas no Bairro Alto em Lisboa, no bar Janela da Atalaia do nosso querido amigo Fred, que nos proporcionou o espaço para a nossa simbólica festa de lançamento dos novos temas que compõem o disco.
+                                            No mundo real, foi no dia 14 de Novembro que partilhámos o nosso primeiro longa-duração com quem esteve presente no Bairro Alto em Lisboa. Foi no bar Janela da Atalaia do nosso querido amigo Fred que acolhemos as primeiras reações aos novos temas que compõem o disco nesta simbólica festa de lançamento.
                                         </p>
                                     </td>
 
@@ -333,7 +333,7 @@
                                             A month has passed since we released our album <strong style="color: #ffcc00;">Endless Order</strong>. After weeks of whirlwind promotion, concerts, celebrations and recovery from celebrations, we can finally dedicate ourselves to our friends in the online world.
                                         </p>
                                         <p style="margin: 0 0 15px 0;">
-                                            In the real world, it was on November 14th that we shared our first full-length album with our closest people in Bairro Alto in Lisbon, at the Janela da Atalaia bar of our dear friend Fred, who provided us with the space for our symbolic release party for the new tracks that make up the record.
+                                            In the real world, it was on November 14th that we shared our first full-length release with those who were present in Bairro Alto, Lisbon. It was at our dear friend Fred’s bar, Janela da Atalaia, that we welcomed the first reactions to the new tracks that make up the album, during this symbolic release celebration.
                                         </p>
                                     </td>
 
